--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
     </div>
 
     <div class="banner" style="margin-top:12px">
-      <strong>RECAP CHALLENGES AND GIVE VALUE STATEMENT</strong> – “IS THERE ANYTHING ELSE I SHOULD KNOW THAT WOULD MAKE THIS TRANSITION BETTER”?
+      <strong>RECAP CHALLENGES AND GIVE VALUE STATEMENT</strong> – <br>“IS THERE ANYTHING ELSE I SHOULD KNOW THAT WOULD MAKE THIS TRANSITION BETTER”?</br>
       <textarea name="ui_value_recap" placeholder="Optional recap…" style="margin-top:10px"></textarea>
     </div>
 
