Checkbox function Declined

--- a/index.html
+++ b/index.html
@@ -597,11 +597,12 @@
     </div>
     <label class="subheader" for="api_impl_date">When are you looking to get this implemented?</label>
 <input type="date" id="api_impl_date" name="api_impl_date" />
-    <label class="option" id="api_declined_wrap">
+   <label class="option" id="api_declined_wrap">
   <input type="checkbox" id="api_declined" name="api_declined" value="Yes" />
   <div><div class="opt-title">Customer Declined Implementation</div></div>
 </label>
 <textarea id="api_declined_why" name="api_declined_why" placeholder="Why?" class="hidden"></textarea>
+
 
 
 
@@ -843,11 +844,11 @@
     </div>
     <label class="subheader" for="ui_impl_date">When are you looking to get this implemented?</label>
 <input type="date" id="ui_impl_date" name="ui_impl_date" />
-    <label class="option" id="api_declined_wrap">
-  <input type="checkbox" id="api_declined" name="api_declined" value="Yes" />
+   <label class="option" id="ui_declined_wrap">
+  <input type="checkbox" id="ui_declined" name="ui_declined" value="Yes" />
   <div><div class="opt-title">Customer Declined Implementation</div></div>
 </label>
-<textarea id="api_declined_why" name="api_declined_why" placeholder="Why?" class="hidden"></textarea>
+<textarea id="ui_declined_why" name="ui_declined_why" placeholder="Why?" class="hidden"></textarea>
 
 
 
