additonal carriers (clearjet + WWEX) - removed UPS UK

--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@ var CARRIER_INTEGRATIONS = [
   {name:'Parcelforce Worldwide',slug:'parcelforce_worldwide',aliases:['parcelforce']},
   {name:'Amazon Shipping',slug:'amazon_shipping',aliases:[]},
   {name:'DHL eCommerce',slug:'dhl_ecommerce',aliases:['dhl ecommerce solutions','dhl ecommerce']},
-  {name:'UPS UK',slug:'ups_uk',aliases:['ups united kingdom']},
+  {name:'WWEX',slug:'wwex',aliases:['world wide express']},
   {name:'APC',slug:'apc',aliases:['apc postal']},
   {name:'Asendia US',slug:'asendia_us',aliases:['asendia']},
   {name:'Better Trucks',slug:'better_trucks',aliases:[]},
@@ -1112,7 +1112,8 @@ var CARRIER_INTEGRATIONS = [
   {name:'ShipX Inc.',slug:'shipx_inc',aliases:['shipx']},
   {name:'Stamps.com',slug:'stamps_com',aliases:['stamps']},
   {name:'Tusk Logistics',slug:'tusk_logistics',aliases:['tusk']},
-  {name:'Wizmo',slug:'wizmo',aliases:[]}
+  {name:'Wizmo',slug:'wizmo',aliases:['clear jet']},
+  {name:'ClearJet',slug:'clearjet',aliases:[]}
 ];
 
 
