fixed alias in carriers

--- a/index.html
+++ b/index.html
@@ -1112,7 +1112,7 @@ var CARRIER_INTEGRATIONS = [
   {name:'ShipX Inc.',slug:'shipx_inc',aliases:['shipx']},
   {name:'Stamps.com',slug:'stamps_com',aliases:['stamps']},
   {name:'Tusk Logistics',slug:'tusk_logistics',aliases:['tusk']},
-  {name:'Wizmo',slug:'wizmo',aliases:['clear jet']},
+  {name:'Wizmo',slug:'wizmo',aliases:['wiz mo']},
   {name:'ClearJet',slug:'clearjet',aliases:[]}
 ];
 
