Is there anything else I should know that would make this transition better? spacing and lowercase

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
     </div>
 
     <div class="banner" style="margin-top:12px">
-      <strong>RECAP CHALLENGES AND GIVE VALUE STATEMENT</strong> – <br>“IS THERE ANYTHING ELSE I SHOULD KNOW THAT WOULD MAKE THIS TRANSITION BETTER”?</br>
+      <strong>RECAP CHALLENGES AND GIVE VALUE STATEMENT</strong> – <br><br>“Is there anything else I should know that would make this transition better?”</br>
       <textarea name="api_value_recap" placeholder="Optional recap…" style="margin-top:10px"></textarea>
     </div>
     <label class="subheader" for="api_impl_date">When are you looking to get this implemented?</label>
@@ -853,7 +853,7 @@
     </div>
 
     <div class="banner" style="margin-top:12px">
-      <strong>RECAP CHALLENGES AND GIVE VALUE STATEMENT</strong> – <br>“IS THERE ANYTHING ELSE I SHOULD KNOW THAT WOULD MAKE THIS TRANSITION BETTER”?</br>
+      <strong>RECAP CHALLENGES AND GIVE VALUE STATEMENT</strong> – <br><br>“Is there anything else I should know that would make this transition better?"</br>
       <textarea name="ui_value_recap" placeholder="Optional recap…" style="margin-top:10px"></textarea>
     </div>
     <label class="subheader" for="ui_impl_date">When are you looking to get this implemented?</label>
